--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ hr {
     text-decoration: none;
   }
   
-  .btn:hover {
+.btn:hover {
     background: #1eae98;
     background-image: -webkit-linear-gradient(top, #1eae98, #1eae98);
     background-image: -moz-linear-gradient(top, #1eae98, #1eae98);
@@ -114,3 +114,21 @@ hr {
     background-image: linear-gradient(to bottom, #1eae98, #1eae98);
     text-decoration: none;
   }
+
+input, select, textarea {
+    width: 50%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+    font-family: 'Roboto', sans-serif;
+}
+
+.contact-form {
+    width: 70%;
+    padding: auto;
+    margin: auto;
+}
